convert to asub and non-DLS

--- a/OXCS700App/src/Makefile
+++ b/OXCS700App/src/Makefile
@@ -19,7 +19,7 @@ OXCS700vdct_DBD += base.dbd
 OXCS700vdct_DBD += stream.dbd
 OXCS700vdct_DBD += asyn.dbd
 OXCS700vdct_DBD += calcSupport.dbd
-OXCS700vdct_DBD += genSubRecord.dbd
+OXCS700vdct_DBD += aSubRecord.dbd
 OXCS700vdct_DBD += alarmlookup.dbd
 
 OXCS700Support_DBD += alarmlookup.dbd
